@@ -1,6 +1,7 @@
 1.2.3
 - Fixed glitch with drum name when loading .aria file
 - Fixed keyboard focus not brought back to main pane after showing "Select Notes" dialog
+- Fixed clicking on track header of drum editor unselects notes
 - More code cleanup
 
 1.2.2
